objects/CP_CPS_Document_On_Certificate__c.object
<CustomObject>
    <description>These are CP/CPS Documents On Certificate</description>
    <fields>
        <fullName>Associated_Trust_Bits__c</fullName>
        <label>Associated Trust Bits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Server Authentication</fullName>
                </value>
                <value>
                    <fullName>Client Authentication</fullName>
                </value>
                <value>
                    <fullName>Code Signing</fullName>
                </value>
                <value>
                    <fullName>Document Signing</fullName>
                </value>
                <value>
                    <fullName>Encrypting File System</fullName>
                </value>
                <value>
                    <fullName>Secure Email</fullName>
                </value>
                <value>
                    <fullName>Time Stamping</fullName>
                </value>
                <value>
                    <fullName>IP Security End System</fullName>
                </value>
                <value>
                    <fullName>IP Security IKE Intermediate</fullName>
                </value>
                <value>
                    <fullName>IP Security Tunnel Termination</fullName>
                </value>
                <value>
                    <fullName>IP Security User</fullName>
                </value>
                <value>
                    <fullName>OCSP Signing</fullName>
                </value>
                <value>
                    <fullName>Private Key Archival</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Last_Updated_Date__c</fullName>
        <label>Document Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <label>Document Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>CPS</fullName>
                </value>
                <value>
                    <fullName>CP/CPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy_Identifiers__c</fullName>
        <label>Policy Identifiers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CP/CPS Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Document Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP/CPS Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>